[package]
name = "burden"
version = "0.2.1"
edition = "2021"
authors = ["Austin Johsnon <me@austinj.work>"]
repository = "https://github.com/AustinJ235/burden"
description = "Error/Warning Pager for Cargo"
license = "MIT/Apache-2.0"
keywords = ["cli", "utility", "tool", "command"]
categories = ["command-line-utilities"]

[dependencies]
cargo_metadata = "0.15.0"
crossterm = "0.25.0"